Da el data frame

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -28212,7 +28212,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "824070de",
+   "id": "48a1b76d",
    "metadata": {},
    "outputs": [
     {
@@ -28518,7 +28518,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "5f7610bb",
+   "id": "d26ff068",
    "metadata": {
     "scrolled": true
    },
@@ -29163,7 +29163,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "30f9f3cc",
+   "id": "bf82b264",
    "metadata": {},
    "outputs": [
     {
@@ -29195,7 +29195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb37933d",
+   "id": "0fc2a3e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29203,7 +29203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a96543",
+   "id": "5153ad9e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29211,7 +29211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "669ea537",
+   "id": "19b62e10",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29219,7 +29219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c84fc075",
+   "id": "5e463912",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29227,7 +29227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02518c5a",
+   "id": "2557eff1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29235,7 +29235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffdebd12",
+   "id": "fd2aa7d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29243,7 +29243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0e865c",
+   "id": "32f083af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29251,14 +29251,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88385cab",
+   "id": "b7510c4a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d63ab8c5",
+   "id": "d25dcf9b",
    "metadata": {},
    "source": [
     "# Recolectar todas las url de cada abogado"
@@ -29267,7 +29267,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "deb603e4",
+   "id": "cc8d96d6",
    "metadata": {},
    "outputs": [
     {
@@ -29313,7 +29313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "061d39a2",
+   "id": "67fb0f62",
    "metadata": {},
    "source": [
     "# Guardar las url de cada pagina y guardarlas"
@@ -29322,7 +29322,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "7bee6bc8",
+   "id": "df028335",
    "metadata": {},
    "outputs": [
     {
@@ -29567,7 +29567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1031ff2",
+   "id": "fcb7e586",
    "metadata": {},
    "source": [
     "# Abrir cada url para leer telefonos"
@@ -29576,7 +29576,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "9b792e48",
+   "id": "4416f0f6",
    "metadata": {},
    "outputs": [
     {
@@ -29611,7 +29611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1debe254",
+   "id": "cb8f2ac4",
    "metadata": {},
    "source": [
     "# Leer info de cada abogado"
@@ -29619,20 +29619,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "45bafe40",
+   "execution_count": 179,
+   "id": "d93efb4d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Abogado Sergio Diaz\n",
-      "Mauricio Caussade Goycoolea\n",
-      "ABOGADOS R & R\n"
+      "C:\\Users\\Fankrit\\AppData\\Local\\Temp\\ipykernel_32748\\2565870472.py:52: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n",
+      "C:\\Users\\Fankrit\\AppData\\Local\\Temp\\ipykernel_32748\\2565870472.py:52: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n",
+      "C:\\Users\\Fankrit\\AppData\\Local\\Temp\\ipykernel_32748\\2565870472.py:52: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n",
+      "C:\\Users\\Fankrit\\AppData\\Local\\Temp\\ipykernel_32748\\2565870472.py:52: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n",
+      "C:\\Users\\Fankrit\\AppData\\Local\\Temp\\ipykernel_32748\\2565870472.py:52: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Street Address</th>\n",
+       "      <th>Telephone Number</th>\n",
+       "      <th>Website</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Timings</th>\n",
+       "      <th>Products</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D:\\Web_Scrapping\\Prueba\\abogado1.html</td>\n",
+       "      <td>Abogado Sergio Diaz</td>\n",
+       "      <td>Prat 350 Ofi. 706</td>\n",
+       "      <td>(9) 85024319</td>\n",
+       "      <td>redsurabogados.cl/</td>\n",
+       "      <td>Temuco, Región de la Araucanía</td>\n",
+       "      <td>ABOGADO\\nSERGIO DIAZ BRAVO\\n\\n– Abogado desde ...</td>\n",
+       "      <td>ABOGADOS</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[Abogados en Temuco,, Abogados en Santiago,, A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D:\\Web_Scrapping\\Prueba\\abogado2.html</td>\n",
+       "      <td>Mauricio Caussade Goycoolea</td>\n",
+       "      <td>Av. Kennedy Lateral 5488, oficina 203</td>\n",
+       "      <td>(2) 982292139</td>\n",
+       "      <td>www.iabogados.cl</td>\n",
+       "      <td>Vitacura, Región Metropolitana</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Abogados</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D:\\Web_Scrapping\\Prueba\\abogado3.html</td>\n",
+       "      <td>ABOGADOS R &amp; R</td>\n",
+       "      <td>La Concepción 81 oficina 319</td>\n",
+       "      <td>(2) 26952980</td>\n",
+       "      <td>abogados-ryr.cl/</td>\n",
+       "      <td>Providencia, Región Metropolitana</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Abogado Tributario</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D:\\Web_Scrapping\\Prueba\\abogado4.html</td>\n",
+       "      <td>Abogados MQM Valdivia</td>\n",
+       "      <td>alonso de benitez 1904</td>\n",
+       "      <td>(9) 94094812</td>\n",
+       "      <td>www.abogadosmqmvaldivia.cl</td>\n",
+       "      <td>Valdivia, Región de Los Ríos</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ABOGADOS DERECHO CIVIL</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D:\\Web_Scrapping\\Prueba\\abogado5.html</td>\n",
+       "      <td>BCK  ABOGADOSY CONTADORES AUDITORES</td>\n",
+       "      <td>Arlequi 263 piso 6</td>\n",
+       "      <td>(9) 88641750</td>\n",
+       "      <td>www.emprendetuempresa.cl</td>\n",
+       "      <td>Viña del Mar, Región Valparaíso</td>\n",
+       "      <td>Nuestra misión es proporcionarle a nuestros cl...</td>\n",
+       "      <td>OFICINA VIRTUAL</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[•\\tASESORIA LEGAL Y CONTABLE, •\\tCONSTITUCION...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     URL                                 Name  \\\n",
+       "0  D:\\Web_Scrapping\\Prueba\\abogado1.html                  Abogado Sergio Diaz   \n",
+       "1  D:\\Web_Scrapping\\Prueba\\abogado2.html          Mauricio Caussade Goycoolea   \n",
+       "2  D:\\Web_Scrapping\\Prueba\\abogado3.html                       ABOGADOS R & R   \n",
+       "3  D:\\Web_Scrapping\\Prueba\\abogado4.html                Abogados MQM Valdivia   \n",
+       "4  D:\\Web_Scrapping\\Prueba\\abogado5.html  BCK  ABOGADOSY CONTADORES AUDITORES   \n",
+       "\n",
+       "                          Street Address Telephone Number  \\\n",
+       "0                      Prat 350 Ofi. 706     (9) 85024319   \n",
+       "1  Av. Kennedy Lateral 5488, oficina 203    (2) 982292139   \n",
+       "2           La Concepción 81 oficina 319     (2) 26952980   \n",
+       "3                 alonso de benitez 1904     (9) 94094812   \n",
+       "4                     Arlequi 263 piso 6     (9) 88641750   \n",
+       "\n",
+       "                      Website                               City  \\\n",
+       "0          redsurabogados.cl/     Temuco, Región de la Araucanía   \n",
+       "1            www.iabogados.cl     Vitacura, Región Metropolitana   \n",
+       "2            abogados-ryr.cl/  Providencia, Región Metropolitana   \n",
+       "3  www.abogadosmqmvaldivia.cl       Valdivia, Región de Los Ríos   \n",
+       "4    www.emprendetuempresa.cl    Viña del Mar, Región Valparaíso   \n",
+       "\n",
+       "                                         Description                Category  \\\n",
+       "0  ABOGADO\\nSERGIO DIAZ BRAVO\\n\\n– Abogado desde ...                ABOGADOS   \n",
+       "1                                               None                Abogados   \n",
+       "2                                               None      Abogado Tributario   \n",
+       "3                                               None  ABOGADOS DERECHO CIVIL   \n",
+       "4  Nuestra misión es proporcionarle a nuestros cl...         OFICINA VIRTUAL   \n",
+       "\n",
+       "  Timings                                           Products  \n",
+       "0    None  [Abogados en Temuco,, Abogados en Santiago,, A...  \n",
+       "1    None                                               None  \n",
+       "2    None                                               None  \n",
+       "3    None                                               None  \n",
+       "4    None  [•\\tASESORIA LEGAL Y CONTABLE, •\\tCONSTITUCION...  "
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df = pd.DataFrame(columns=[\"URL\", \"Name\", \"Street Address\", \"Telephone Number\", \"Website\", \"City\", \"Description\", \"Category\", \"Timings\", \"Products\"])\n",
+    "\n",
+    "for i in range(1,6):\n",
+    "    url = r\"D:\\Web_Scrapping\\Prueba\\abogado{}.html\".format(i)\n",
+    "\n",
+    "    with open(url, encoding=\"utf-8\") as fp:\n",
+    "        soup = BeautifulSoup(fp, 'html.parser')\n",
+    "        info = soup.find(\"div\", {\"class\": \"f-nombre_empresa\"})\n",
+    "        try:\n",
+    "            name = info.find(\"h1\", {\"itemprop\": \"name\", \"class\": \"ng-binding\"}).text\n",
+    "        except:\n",
+    "            name = None\n",
+    "        try:\n",
+    "            streetAddress = soup.find(\"meta\", {\"itemprop\": \"streetAddress\"})[\"content\"]\n",
+    "        except:\n",
+    "            streetAddress = None\n",
+    "        try:\n",
+    "            telephone_element = soup.find(\"span\", attrs={\"itemprop\": \"telephone\"})\n",
+    "            telephone_number = telephone_element.text\n",
+    "        except:\n",
+    "            telephone_number = None\n",
+    "        try:\n",
+    "            web = soup.find('button', {'class': 'f-web puntero ng-scope'}).find('p').text\n",
+    "        except:\n",
+    "            web = None\n",
+    "        try:\n",
+    "            city = soup.find(\"li\", itemprop=\"addressLocality\").text\n",
+    "        except:\n",
+    "            city = None\n",
+    "        try:\n",
+    "            description = soup.find(\"p\", attrs={\"itemprop\": \"description\"}).text\n",
+    "        except:\n",
+    "            description = None\n",
+    "        try:\n",
+    "            category_element = soup.find(\"a\", class_=\"f-categorias_cat\").text  \n",
+    "        except:\n",
+    "            category_element = None\n",
+    "        try:\n",
+    "            section = soup.find(\"section\", {\"id\": \"items\"})\n",
+    "        except:\n",
+    "            section = None\n",
+    "        try:\n",
+    "            horario = section.find(\"p\").text\n",
+    "        except:\n",
+    "            horario = None\n",
+    "        try:\n",
+    "            section = soup.find(\"p\", {\"ng-bind-html\": \"productos_y_servicios\"})\n",
+    "            productos = [item.strip() for item in section.text.split(\"\\n\") if item.strip()]\n",
+    "        except:\n",
+    "            productos = None\n",
+    "            \n",
+    "        df = df.append({\"URL\": url, \"Name\": name, \"Street Address\": streetAddress, \"Telephone Number\": telephone_number, \"Website\": web, \"City\": city, \"Description\": description, \"Category\": category_element, \"Timings\": horario, \"Products\": productos}, ignore_index=True)\n",
+    "\n",
+    "    \n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21cc0784",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e4b8722",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a43b9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35082430",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "b983793a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import glob\n",
     "import pandas as pd\n",
@@ -29646,8 +29893,48 @@
     "    with open(url, encoding=\"utf-8\") as fp:\n",
     "        soup = BeautifulSoup(fp, 'html.parser')\n",
     "        info = soup.find(\"div\", {\"class\": \"f-nombre_empresa\"})\n",
-    "        name = info.find(\"h1\", {\"itemprop\": \"name\", \"class\": \"ng-binding\"}).text\n",
-    "        print(name)\n"
+    "        try:\n",
+    "            name = info.find(\"h1\", {\"itemprop\": \"name\", \"class\": \"ng-binding\"}).text\n",
+    "        except:\n",
+    "            name = None\n",
+    "        try:\n",
+    "            streetAddress = soup.find(\"meta\", {\"itemprop\": \"streetAddress\"})[\"content\"]\n",
+    "        except:\n",
+    "            streetAddress = None\n",
+    "        try:\n",
+    "            telephone_element = soup.find(\"span\", attrs={\"itemprop\": \"telephone\"})\n",
+    "            telephone_number = telephone_element.text\n",
+    "        except:\n",
+    "            telephone_number = None\n",
+    "        try:\n",
+    "            web = soup.find('button', {'class': 'f-web puntero ng-scope'}).find('p').text\n",
+    "        except:\n",
+    "            web = None\n",
+    "        try:\n",
+    "            city = soup.find(\"li\", itemprop=\"addressLocality\").text\n",
+    "        except:\n",
+    "            city = None\n",
+    "        try:\n",
+    "            description = soup.find(\"p\", attrs={\"itemprop\": \"description\"}).text\n",
+    "        except:\n",
+    "            description = None\n",
+    "        try:\n",
+    "            category_element = soup.find(\"a\", class_=\"f-categorias_cat\").text  \n",
+    "        except:\n",
+    "            category_element = None\n",
+    "        try:\n",
+    "            section = soup.find(\"section\", {\"id\": \"items\"})\n",
+    "        except:\n",
+    "            section = None\n",
+    "        try:\n",
+    "            horario = section.find(\"p\").text\n",
+    "        except:\n",
+    "            horario = None\n",
+    "        try:\n",
+    "            section = soup.find(\"p\", {\"ng-bind-html\": \"productos_y_servicios\"})\n",
+    "            productos = [item.strip() for item in section.text.split(\"\\n\") if item.strip()]\n",
+    "        except:\n",
+    "            productos = None\n"
    ]
   }
  ],
